[gd_scene load_steps=2 format=3 uid="uid://doqb8uuttd6fb"]

[ext_resource type="Script" path="res://addons/editordebugger4g4/main.gd" id="1_plmsh"]

[node name="EditorDebugger4G4" type="TabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plmsh")

[node name="NodesTree" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NodesTree"]
layout_mode = 2

[node name="Label" type="Label" parent="NodesTree/HBoxContainer"]
layout_mode = 2
text = "相对父层级："

[node name="depthSpin" type="SpinBox" parent="NodesTree/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Grid" type="GridContainer" parent="NodesTree"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="NodesTree/Grid"]
layout_mode = 2
text = "选中节点："

[node name="nameTxt1" type="LineEdit" parent="NodesTree/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="NodesTree/Grid"]
layout_mode = 2
text = "相对于："

[node name="nameTxt2" type="LineEdit" parent="NodesTree/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="NodesTree/Grid"]
layout_mode = 2
text = "的索引路径："

[node name="indexsTxt" type="LineEdit" parent="NodesTree/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="NodesTree"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="NodesTree"]
layout_mode = 2

[node name="ShowMainBtn" type="CheckButton" parent="NodesTree/HBox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "仅显示主要结构"

[node name="ShowRectBtn" type="CheckButton" parent="NodesTree/HBox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "高亮显示选中项"

[connection signal="item_selected" from="NodesTree/Tree" to="." method="_on_tree_item_selected"]
[connection signal="toggled" from="NodesTree/HBox/ShowMainBtn" to="." method="_on_show_main_btn_toggled"]
[connection signal="toggled" from="NodesTree/HBox/ShowRectBtn" to="." method="_on_show_rect_btn_toggled"]
